--- a/version/src/main/res/drawable/version_cancel_btn.xml
+++ b/version/src/main/res/drawable/version_cancel_btn.xml
@@ -8,5 +8,5 @@
         android:topRightRadius="201dp" />
     <stroke
         android:width="1dp"
-        android:color="#2691ea" />
+        android:color="#1dadf5" />
 </shape>
