--- a/version/src/main/res/drawable/version_update_btn.xml
+++ b/version/src/main/res/drawable/version_update_btn.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#2691ea" />
+    <solid android:color="#1dadf5" />
     <corners
         android:bottomLeftRadius="201dp"
         android:bottomRightRadius="201dp"
@@ -8,5 +8,5 @@
         android:topRightRadius="201dp" />
     <stroke
         android:width="1dp"
-        android:color="#2691ea" />
+        android:color="#1dadf5" />
 </shape>
