--- a/version/src/main/res/layout/didd_version_layout.xml
+++ b/version/src/main/res/layout/didd_version_layout.xml
@@ -90,6 +90,7 @@
                 <!--cancel btn-->
                 <Button
                     android:id="@+id/version_btn_cancel"
+                    style="?android:attr/borderlessButtonStyle"
                     android:layout_width="1dp"
                     android:layout_height="36dp"
                     android:layout_weight="1"
@@ -100,7 +101,7 @@
                     android:gravity="center"
                     android:text="Cruel leave"
                     android:textAllCaps="false"
-                    android:textColor="#2497e8"
+                    android:textColor="@color/version_cancel_btn_col"
                     android:textSize="14sp" />
 
                 <View
@@ -110,6 +111,7 @@
                 <!--update btn-->
                 <Button
                     android:id="@+id/version_btn_update"
+                    style="?android:attr/borderlessButtonStyle"
                     android:layout_width="1dp"
                     android:layout_height="36dp"
                     android:layout_weight="1"
@@ -120,7 +122,7 @@
                     android:gravity="center"
                     android:text="Try it now"
                     android:textAllCaps="false"
-                    android:textColor="#ffffff"
+                    android:textColor="@color/version_update_btn_col"
                     android:textSize="14sp" />
 
             </LinearLayout>
