1, update version UI. 2, add local db. 3, update version to 1.0.4

--- a/version/src/main/res/layout/didd_version_layout.xml
+++ b/version/src/main/res/layout/didd_version_layout.xml
@@ -120,7 +120,7 @@
                     android:focusable="true"
                     android:fontFamily="sans-serif"
                     android:gravity="center"
-                    android:text="Try it now"
+                    android:text="Update"
                     android:textAllCaps="false"
                     android:textColor="@color/version_update_btn_col"
                     android:textSize="14sp" />
