--- a/version/src/main/res/color/version_cancel_btn_col.xml
+++ b/version/src/main/res/color/version_cancel_btn_col.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="#178ac4" android:state_pressed="true"/>
-    <item android:color="#1dadf5" android:state_pressed="false"/>
+    <item android:color="#178ac4" android:state_enabled="true" android:state_pressed="true" />
+    <item android:color="#1dadf5" android:state_enabled="true" android:state_pressed="false" />
+    <item android:color="#e0e0e0" android:state_enabled="false" />
 </selector>
